--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8080
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/mymart
-spring.datasource.username=root
-spring.datasource.password=shital
+spring.datasource.url=jdbc:mysql://mymart.mysql.database.azure.com:3306/mymart
+spring.datasource.username=sqladmin
+spring.datasource.password=Admin12345
 
 spring.jpa.hibernate.ddl-auto = update
 
